fixed table overflow on small screens

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,11 +1,11 @@
 html,
-main {
+body {
     height: 100%;
     background: rgb(206,131,241);
     background: linear-gradient(90deg, rgba(206,131,241,1) 0%, rgba(129,129,227,1) 38%, rgba(0,212,255,1) 93%, rgba(0,228,255,1) 100%);
 }
 
-main {
+body {
     display: -ms-flexbox;
     display: -webkit-box;
     display: flex;
@@ -18,6 +18,10 @@ main {
     padding-top: 40px;
     padding-bottom: 40px;
     background-color: #f5f5f5;
+}
+
+main {
+    max-width: 90vw;
 }
 
 .content {
